Added min version of php safe exception

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
     }
   },
   "require": {
-    "zafarjonovich/php-safe-exception": "*"
+    "zafarjonovich/php-safe-exception": ">=0.0.0.2"
   }
 }
